--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "haugstrup/GroupBuilder",
-    "description": "Group builder for match-play pinball tournaments",
+    "name": "haugstrup/TournamentUtils",
+    "description": "Tournament utilities for match-play pinball tournaments",
     "license": "MIT",
     "keywords": ["pinball"],
     "authors": [
@@ -12,7 +12,7 @@
     "require-dev": {},
     "autoload": {
         "psr-4": {
-            "haugstrup\\GroupBuilder\\": "src"
+            "haugstrup\\TournamentUtils\\": "src"
         }
     }
 }
