Make json valid

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["pinball"],
     "authors": [
         {
-            "name": "Andreas Haugstrup Pedersen",
+            "name": "Andreas Haugstrup Pedersen"
         }
     ],
     "require": {},
