--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "require": {},
-    "require-dev": {},
+    "require-dev": {
+      "phpunit/phpunit": "5.6.*"
+    },
     "autoload": {
         "psr-4": {
             "haugstrup\\TournamentUtils\\": "src"
