Add slack notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: php
 php:
-  - '5.6'
-  - '7.0'
-  - hhvm
-  - nightly
+- '5.6'
+- '7.0'
+- hhvm
+- nightly
+notifications:
+  slack:
+    secure: apOweTUNUDt2rzAHD6OrIgrdX0EaRwQLQYd6yqcZ4qqx//8/91oC1/s46boOVFqfXE8WiJdj3iz8SwxbUcHs5wc/66eCuHusiIMT0bEsL7yZ6t9kioEokuKq2qIy3gt3S9jBtWkYdfqw63RU46vfU6+eAid4Div45XLDHeNJX8Y=
