--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "haugstrup/TournamentUtils",
+    "name": "haugstrup/tournamentutils",
     "description": "Tournament utilities for match-play pinball tournaments",
     "license": "MIT",
     "keywords": ["pinball"],
@@ -8,9 +8,8 @@
             "name": "Andreas Haugstrup Pedersen"
         }
     ],
-    "require": {},
     "require-dev": {
-      "phpunit/phpunit": "5.7.*"
+      "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
